# vk-compute

./: CMakeLists.txt  README.md
doc/: install.md
include/: gpuinfo.h  hello.h
src/: gpuinfo.cpp  hello.cpp
