# Check CMake version
CMAKE_MINIMUM_REQUIRED (VERSION 3.13 FATAL_ERROR)

# Project name
PROJECT(vk-compute)

# Set target name
IF (NOT DEFINED VK_COMPUTE_NAME)
    SET (VK_COMPUTE_NAME ${CMAKE_PROJECT_NAME} CACHE INTERNAL "" FORCE)
ENDIF()

# Module options
OPTION (ENABLE_BENCHMARK        "Build benchmark"        OFF)    # TODO
OPTION (ENABLE_EXAMPLES         "Build examples"         OFF)    # TODO
OPTION (ENABLE_TESTS            "Build tests"            OFF)    # TODO

# TODO
# Enable cmake ctest module
# ENABLE_TESTING ()

# Main source files
# ADD_SUBDIRECTORY (src)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src VK_COMPUTE_SRCS)

IF (ENABLE_BENCHMARK)
    ADD_SUBDIRECTORY(benchmark)
ENDIF()

IF (ENABLE_EXAMPLES)
    ADD_SUBDIRECTORY(examples)
ENDIF()

IF (ENABLE_BUILD_TESTS)
    ADD_SUBDIRECTORY(tests)
ENDIF()

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/)

ADD_LIBRARY (${VK_COMPUTE_NAME}        SHARED ${VK_COMPUTE_SRCS})
ADD_LIBRARY (${VK_COMPUTE_NAME}-static STATIC ${VK_COMPUTE_SRCS})
SET_TARGET_PROPERTIES(${VK_COMPUTE_NAME}-static PROPERTIES OUTPUT_NAME ${VK_COMPUTE_NAME})

